# advent_of_code_2017

./: .gitignore  .gitmodules  README.md  advent-of-code.asd  advent-of-code.lisp  aoc.lisp  day01.lisp  day02.lisp  day03.lisp  day04.lisp  day05.input.txt  day05.lisp  day06.lisp  day07.lisp  day08.lisp  day09.lisp  day10.lisp  day10_1.cpp  day10_2.cpp  day11_1.cpp  day11_2.cpp  day12_1.cpp  day12_2.cpp  day13_1.cpp  day13_2.cpp  day14_1.cpp  day14_2.cpp  day15_1.cpp  day15_2.cpp  day16_1.cpp  day16_2.cpp  day17_1.cpp  day17_2.cpp  day18_1.cpp  day18_2.cpp  day19_1.cpp  day19_2.cpp  day1_1.cpp  day1_2.cpp  day20_1.cpp  (+28 more)
.github/: PULL_REQUEST_TEMPLATE.md
0mN1-JavaScript/: day01.js  day02.js  day03.js  day04.js  day05.js
2016/: day01.lisp  day02.input.txt  day02.lisp  day03.lisp  day04.lisp  day05.lisp  day06.lisp  day07.lisp  day08.lisp  day09.lisp  day10.input.txt  day10.lisp  tests.lisp
2017/: day01.lisp  day05.lisp  day06.lisp  day10.lisp  day11.lisp  day13.lisp  day17.lisp  day18.lisp  day19.lisp  day20.lisp  day22.input.txt  day25.lisp  tests.lisp
Airwide-python/: .day2part2.py.swp  day1part1.py  day1part2.py  day2.in  day2part1.py  day2part2.py  day2test.in  day2test2.in  day3part1.py  day3part2.py
DonKarlssonSan-JavaScript/: day04-passphrase-validator.js  day05-input.txt  day05.js  day08-input.txt  day08.js  day1-sum-match-next.js  day10.js  day11-input.txt  day11.js  day12-input.txt  day12.js  day2-checksum.js  day3.js  day5.js  day6.js  day8.js  day9-input.txt  day9.js  package-lock.json  package.json
DonKarlssonSan-Python/: Day1Part1.py  Day1Part2.py  Day5Part1AndPart2.py
Frojdholm-python3/: dec10.py  dec10input.txt  dec11input.txt  dec11part1.py  dec11part2.py  dec12.py  dec13.py  dec13input.txt  dec14part1.py  dec14part2.py  dec15part1.py  dec15part2.py  dec16.py  dec16input.txt  dec17.py  dec17part2.py  dec1part1.py  dec1part2.py  dec2part1.py  dec2part2.py  dec3part1.py  dec3part2.py  dec4part1.py  dec4part2.py  dec5input.txt  dec5part1.py  dec5part2.py  dec6part1.py  dec6part2.py  dec7.py  dec7input.txt  dec8.py  dec8input.txt  dec9.py  dec9input.txt
LudvigGislason-nim/: .gitignore  README.md  adventofcode.nimble
Mannogroth-MIPS Assembly/: day_one.mips  day_one_part_two.mips
TechpriestV-python3/: .gitignore  dag1.py  dag2.py  dag3.py  dag4.py  dag5.py  dag6.py  dag8.py
Thunderdeer-c++/: .gitignore  README.md
ZetaTwo-scala/: .gitattributes  Common.scala  Day01.scala  (+25 more)
aelg-haskell/: .gitignore  LICENSE  README.md  aoc.cabal  stack.yaml
aelg-haskell/app/: Main.hs
aelg-haskell/src/: Eight.hs  Eighteen.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  Fourteen.hs  Grid.hs  KnotHash.hs  Nine.hs  Nineteen.hs  One.hs  Seven.hs  Seventeen.hs  Six.hs  Sixteen.hs  Ten.hs  Thirteen.hs  Three.hs  Twelve.hs  Twenty.hs  Twentyfive.hs  Twentyfour.hs  Twentyone.hs  Twentythree.hs  Twentytwo.hs  Two.hs  Util.hs
f00ale-cpp/: CMakeLists.txt  p01.cpp  p01a.cpp  p01b.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp  p09.cpp  p10.cpp  p11.cpp  p12.cpp  p13.cpp  p14.cpp  p15.cpp  p16.cpp  p17.cpp  p18.cpp  p19.cpp  p20.cpp  p21.cpp  p22.cpp  p23.cpp  p24.cpp  p25.cpp
f00ale-cpp/inputs/: p01.txt  p02.txt  p07.txt  p08.txt  p09.txt  p10.txt  p13.txt  p14.txt  p15t.txt  p16.txt  p18.txt  p19.txt  p20tb.txt  p22.txt  p24t.txt  p25.txt
peterw-C++/: CMakeLists.txt  README.md
peterw-C++/Day1/: CMakeLists.txt  Day1.cpp
peterw-C++/Day10/: CMakeLists.txt  Day10.cpp  input.txt
peterw-C++/Day11/: CMakeLists.txt  Day11.cpp  input.txt
peterw-C++/Day12/: CMakeLists.txt  Day12.cpp  input.txt
peterw-C++/Day13/: CMakeLists.txt  Day13.cpp  input.txt
peterw-C++/Day14/: CMakeLists.txt  Day14.cpp  KnotHash.h
peterw-C++/Day15/: CMakeLists.txt  Day15.cpp
peterw-C++/Day16/: CMakeLists.txt  Day16.cpp  input.txt
peterw-C++/Day17/: CMakeLists.txt  Day17.cpp
peterw-C++/Day18/: CMakeLists.txt  Day18p1.cpp  Day18p2.cpp
peterw-C++/Day19/: CMakeLists.txt  Day19.cpp
peterw-C++/Day2/: CMakeLists.txt  Day2.cpp
peterw-C++/Day20/: CMakeLists.txt  Day20.cpp
peterw-C++/Day21/: CMakeLists.txt  Day21.cpp  input.txt
peterw-C++/Day22/: CMakeLists.txt  Day22p1.cpp  Day22p2.cpp  input.txt
peterw-C++/Day23/: CMakeLists.txt  Day23.cpp
peterw-C++/Day24/: CMakeLists.txt  Day24.cpp
peterw-C++/Day25/: CMakeLists.txt  Day25.cpp
peterw-C++/Day3/: CMakeLists.txt  Day3.cpp
peterw-C++/Day4/: CMakeLists.txt  Day4.cpp
peterw-C++/Day5/: CMakeLists.txt  Day5.cpp  input.txt
peterw-C++/Day6/: CMakeLists.txt  Day6.cpp  config.h.in
peterw-C++/Day7/: CMakeLists.txt  Day7.cpp
peterw-C++/Day8/: CMakeLists.txt  Day8.cpp
peterw-C++/Day9/: CMakeLists.txt  Day9.cpp
peterw-C++/common/: common.h
rollbear-cpp/: CMakeLists.txt
rollbear-cpp/Day1/: CMakeLists.txt  day1.cpp
rollbear-cpp/Day10/: CMakeLists.txt  day10.cpp
rollbear-cpp/Day11/: CMakeLists.txt  day11.cpp
rollbear-cpp/Day12/: CMakeLists.txt  day12.cpp
rollbear-cpp/Day13/: CMakeLists.txt  day13.cpp
rollbear-cpp/Day14/: CMakeLists.txt  day14.cpp
rollbear-cpp/Day15/: CMakeLists.txt  day15.cpp
rollbear-cpp/Day2/: CMakeLists.txt  day2.cpp
rollbear-cpp/Day3/: CMakeLists.txt  day3.cpp
rollbear-cpp/Day4/: CMakeLists.txt  day4.cpp
rollbear-cpp/Day5/: CMakeLists.txt  day5.cpp
rollbear-cpp/Day6/: CMakeLists.txt  day6.cpp
rollbear-cpp/Day7/: CMakeLists.txt  day7.cpp
rollbear-cpp/Day8/: CMakeLists.txt  day8.cpp
rollbear-cpp/Day9/: CMakeLists.txt  day9.cpp
(+1784 files in other folders)
