cmake_minimum_required(VERSION 3.8)
project(AOC17)

set(CMAKE_CXX_STANDARD 17)

add_executable(p01 p01.cpp)
add_executable(p02 p02.cpp)
add_executable(p03 p03.cpp)
add_executable(p04 p04.cpp)
add_executable(p05 p05.cpp)
add_executable(p06 p06.cpp)
add_executable(p07 p07.cpp)
add_executable(p08 p08.cpp)
add_executable(p09 p09.cpp)
add_executable(p10 p10.cpp)
add_executable(p11 p11.cpp)
add_executable(p12 p12.cpp)
add_executable(p13 p13.cpp)
add_executable(p14 p14.cpp)
add_executable(p15 p15.cpp)
add_executable(p16 p16.cpp)
add_executable(p17 p17.cpp)
add_executable(p18 p18.cpp)
add_executable(p19 p19.cpp)
